data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_556.wast
;; - **Test 7**:    Utilize a loop with no instructions inside, essentially an empty loop that never breaks and see how it handles infinite iterations without encountering any instructions.     Constraint: Empty loop body with no `end` condition.     Relation: Pure infinite loop scenario verification.

(assert_invalid
  (module (func $infinite_empty_loop
    (loop (br 0))
  ))
  "infinite loop"
)